syntax= "proto3";

package proto;
option go_package="work01/proto";

service UserGrpcService {
    rpc CreateUser (CreateUserReq) returns (CreateUserRes);
    rpc GetUserById (GetUserByIdReq) returns (GetUserByIdRes);
    rpc GetAllUser (GetAllUserReq) returns (GetAllUserRes);
    rpc UpdateUserById (UpdateUserByIdReq) returns (UpdateUserByIdRes);
    rpc DeleteUserById (DeleteUserByIdReq) returns (DeleteUserByIdRes);
}

message CreateUserReq {
    string first_name = 1;
    string last_name = 2;
    string phone_number = 3;
    string email = 4;
    string password = 5;
}

message CreateUserRes {
    string result = 1;
}

message GetUserByIdReq {
    string user_id = 1;
}

message GetUserByIdRes {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone_number = 5;
    bool is_active = 6;
    string avatar = 7;
    string role_name = 8;
    // string role_id = 9;
    optional string role_id = 10;
}

message GetAllUserReq {
    int32 page = 1;
    int32 size = 2;
    string role_id = 3;
    string is_active = 4;
}

message Pagination {
    int32 current_page = 1;
    int32 total_page = 2;
    int32 size = 3;
    int32 total_items = 4;
}

message UsersDTO {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone_number = 5;
    bool is_active = 6;
    string avatar = 7;
    string role_name = 8;
}

message GetAllUserRes {
    // string user_id = 1;
    // string first_name = 2;
    // string last_name = 3;
    // string email = 4;
    // string phone_number = 5;
    // bool is_active = 6;
    // string avatar = 7;
    // string role_name = 8;
    repeated UsersDTO users = 9;
    Pagination pagination = 10;
}

message UpdateUserByIdReq {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone_number = 5;
    bool is_active = 6;
    // string avatar = 7;
    // string role_name = 8;
}

message UpdateUserByIdRes {
    string result = 1;
}

message DeleteUserByIdReq {
    string user_id = 1;
}

message DeleteUserByIdRes {
    string result = 1;
}